# Criticore

./: .gitignore  Criticore.sln  README.md  pyproject.toml
ChatBot.Api/: ChatBot.Api.csproj  ChatBot.Api.http  Program.cs
ChatBot.Application/: ChatBot.Application.csproj  Class1.cs
ChatBot.Domain/: Class1.cs
ChatBot.Infrastructure/: ChatBot.Infrastructure.csproj
Class.API/: Class.API.csproj  Class.API.http  Program.cs  appsettings.json
Class.Application/: Class.Application.csproj
Class.Infrastructure/: Class.Infrastructure.csproj
Course.Api/: Program.cs  WeatherForecast.cs
Course.Application/: Class1.cs
Course.Domain/: Class1.cs
Front-end/: Front-end.csproj  Program.cs  appsettings.json
Homework.Api/: Homework.Api.csproj  Homework.Api.http  Program.cs  WeatherForecast.cs  appsettings.json
Homework.Application/: Homework.Application.csproj
Homework.Infrastructure/: Homework.Infrastructure.csproj
Identity.Api/: Identity.Api.csproj  Program.cs  appsettings.json
Identity.Application/: Identity.Application.csproj
Identity.Infrastructure/: Identity.Infrastructure.csproj
Material.API/: Material.API.csproj  Material.API.http  Program.cs  WeatherForecast.cs  appsettings.json
Material.Application/: Material.Application.csproj
Material.Infrastructure/: Material.Infrastructure.csproj
Materials.Domain/: Material.Domain.csproj
OcelotApiGateway/: OcelotApiGateway.csproj  OcelotApiGateway.http  Program.cs  ocelot.json
Payment.Api/: Payment.Api.csproj  Payment.Api.http  Program.cs  appsettings.json
Payment.Domain/: Payment.Domain.csproj
(+341 files in other folders)
