[project]
name = "exe101-mvp"
version = "0.1.0"
description = "Educational platform with RAG integration"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "pypdf>=6.1.0",
    "python-dotenv>=1.1.1",
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "langchain-community>=0.3.30",
    "google-generativeai>=0.3.0",
    "langchain-google-genai>=2.0.5",
    "psutil>=5.9.5",
]
